[gd_scene load_steps=8 format=3 uid="uid://hxaial4lcwu7"]

[ext_resource type="Script" path="res://Scripts/UI/Educational/learn_tab.gd" id="1_6475f"]
[ext_resource type="PackedScene" uid="uid://baltedrhixfl7" path="res://Scenes/UI/Wiki/TutorialsMenu.tscn" id="2_rdoye"]
[ext_resource type="PackedScene" uid="uid://b5f677a5bdad" path="res://Scenes/UI/Wiki/PuzzlesMenu.tscn" id="2_xisac"]
[ext_resource type="PackedScene" uid="uid://bvh2qsh5v3et" path="res://Scenes/UI/Wiki/WikiSymbols.tscn" id="3_7py82"]
[ext_resource type="PackedScene" uid="uid://q0k58xy6fkre" path="res://Scenes/UI/Wiki/CampaignBattlesMenu.tscn" id="3_x5eob"]
[ext_resource type="PackedScene" uid="uid://p42st2s5b6o3" path="res://Scenes/UI/Wiki/WikiMagic.tscn" id="6_c6jlk"]
[ext_resource type="PackedScene" uid="uid://cmi3w4brn1nc7" path="res://Scenes/UI/Wiki/WorldWiki/WikiWorldTerrain.tscn" id="7_7mprj"]

[node name="Learn" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6475f")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopMenu" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Seperator" type="Control" parent="MainContainer/TopMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Title" type="Label" parent="MainContainer/TopMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "Learn"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="MainContainer/TopMenu"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="TabBarModeSelection" type="TabBar" parent="MainContainer/TopMenu"]
layout_mode = 2
size_flags_horizontal = 3
tab_count = 3
scrolling_enabled = false
tab_0/title = "Practice"
tab_1/title = "Battle Wiki"
tab_2/title = "World Wiki"

[node name="TabBarPractice" type="TabBar" parent="MainContainer/TopMenu"]
layout_mode = 2
size_flags_horizontal = 3
tab_count = 2
current_tab = 1
tab_0/title = "Basic Information"
tab_1/title = "Tutorials"

[node name="TabBarBattleWiki" type="TabBar" parent="MainContainer/TopMenu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TabBarWorldWiki" type="TabBar" parent="MainContainer/TopMenu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PracticeSection" type="Node2D" parent="MainContainer"]

[node name="Tutorials" parent="MainContainer" instance=ExtResource("2_rdoye")]
layout_mode = 2

[node name="Puzzles" parent="MainContainer" instance=ExtResource("2_xisac")]
visible = false
layout_mode = 2

[node name="CampaignBattles" parent="MainContainer" instance=ExtResource("3_x5eob")]
visible = false
layout_mode = 2

[node name="BattleWikiSection" type="Node2D" parent="MainContainer"]

[node name="WikiSymbols" parent="MainContainer" instance=ExtResource("3_7py82")]
visible = false
layout_mode = 2

[node name="WikiMagic" parent="MainContainer" instance=ExtResource("6_c6jlk")]
visible = false
layout_mode = 2

[node name="WorldWikiSection" type="Node2D" parent="MainContainer"]

[node name="WikiWorldTerrain" parent="MainContainer" instance=ExtResource("7_7mprj")]
visible = false
layout_mode = 2

[connection signal="tab_changed" from="MainContainer/TopMenu/TabBarModeSelection" to="." method="_on_tab_bar_mode_selection_tab_changed"]
[connection signal="tab_changed" from="MainContainer/TopMenu/TabBarPractice" to="." method="_on_tab_bar_practice_tab_changed"]
[connection signal="tab_changed" from="MainContainer/TopMenu/TabBarBattleWiki" to="." method="_on_tab_bar_battle_wiki_tab_changed"]
[connection signal="tab_changed" from="MainContainer/TopMenu/TabBarWorldWiki" to="." method="_on_tab_bar_world_wiki_tab_changed"]
